Fixed aria label on inputs

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
 
                 <form class="form__content">
                     <div class="form__field">
-                        <input type="text" placeholder="First Name" data-first-name>
+                        <input type="text" placeholder="First Name" aria-label="First Name field" data-first-name>
                         <div class="form__error-icon"></div>
                         <p class="form__info">First name cannot be empty</p>
                     </div>
                     <div class="form__field">
-                        <input type="text" placeholder="Last Name" data-last-name>
+                        <input type="text" placeholder="Last Name" aria-label="Last name field" data-last-name>
                         <div class="form__error-icon"></div>
                         <p class="form__info">Last name cannot be empty</p>
                     </div>
                     <div class="form__field">
-                        <input type="email" placeholder="Email Address" data-email>
+                        <input type="email" placeholder="Email Address" aria-label="Email field" data-email>
                         <div class="form__error-icon"></div>
                         <p class="form__info">Looks like this is not an email</p>
                     </div>
                     <div class="form__field">
-                        <input type="password" placeholder="Password" data-password>
+                        <input type="password" placeholder="Password" aria-label="Password field" data-password>
                         <div class="form__error-icon"></div>
                         <p class="form__info">Password cannot be empty</p>
                     </div>
