Fixed aria label

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
                 <form class="form__content">
                     <div class="form__field">
-                        <input type="text" placeholder="First Name" aria-label="First Name field" data-first-name>
+                        <input type="text" placeholder="First Name" aria-label="First Name field" data-firstName>
                         <div class="form__error-icon"></div>
                         <p class="form__info">First name cannot be empty</p>
                     </div>
                     <div class="form__field">
-                        <input type="text" placeholder="Last Name" aria-label="Last name field" data-last-name>
+                        <input type="text" placeholder="Last Name" aria-label="Last name field" data-lastNgit ame>
                         <div class="form__error-icon"></div>
                         <p class="form__info">Last name cannot be empty</p>
                     </div>
