fixed text errors

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <p class="form__info">First name cannot be empty</p>
                     </div>
                     <div class="form__field">
-                        <input type="text" placeholder="Last Name" aria-label="Last name field" data-lastNgit ame>
+                        <input type="text" placeholder="Last Name" aria-label="Last name field" data-lastName>
                         <div class="form__error-icon"></div>
                         <p class="form__info">Last name cannot be empty</p>
                     </div>
